--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Watts Wrong</title>
+    <title>Watts Wrong - About</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
       </a>
       <nav class="header-menu">
         <ul>
-          <li><a href="about.html">About</a></li>
+          <li><a class="active-link" href="about.html">About</a></li>
           <li><a href="grid-status.html">Grid Status</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -32,7 +32,7 @@
       <container class="content-left">
         <div class="sticky-warpper">
           <div class="content-wraper">
-            <h1>Watts Wrong Corporation</h1>
+            <h1>About Watts Wrong</h1>
             <p>
               Dish panel screwdriver head. Torso brick hose flag. Esse cylinder
               pro vehicle harpoon rem pro. Sit bracket treasure chest qui whip
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="image-wrapper">
-          <img src="./images/city-hotel-1 1.png" />
+          <img src="./images/city-hotel-1 1 (1).png" />
         </div>
       </container>
       <container class="cta">
@@ -80,8 +80,8 @@
       </a>
       <nav>
         <ul>
-          <li><a class="active-link" href="/">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a class="active-link" href="about.html">About</a></li>
           <li><a href="grid-status.html">Grid Status</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
