--- a/grid-status.html
+++ b/grid-status.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Watts Wrong</title>
+    <title>Watts Wrong - Grid Status</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,7 +23,9 @@
       <nav class="header-menu">
         <ul>
           <li><a href="about.html">About</a></li>
-          <li><a href="grid-status.html">Grid Status</a></li>
+          <li>
+            <a class="active-link" href="grid-status.html">Grid Status</a>
+          </li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -46,7 +48,7 @@
           </div>
         </div>
         <div class="image-wrapper">
-          <img src="./images/city-hotel-1 1.png" />
+          <img src="./images/city-hotel-1 1 (2).png" />
         </div>
       </container>
       <container class="cta">
@@ -80,9 +82,11 @@
       </a>
       <nav>
         <ul>
-          <li><a class="active-link" href="/">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="grid-status.html">Grid Status</a></li>
+          <li>
+            <a class="active-link" href="grid-status.html">Grid Status</a>
+          </li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
