Include bar.js library in index-backup.html
Added a script tag to include bar.js library.

--- a/index-backup.html
+++ b/index-backup.html
@@ -18,5 +18,14 @@
       >
       for more information
     </h2>
+
+    <script src="https://cdn.brickmmo.com/bar@1.1.0/bar.js"
+        data-console="false" 
+        data-menu="false" 
+        data-admin="false" 
+        data-local="false" 
+        data-https="true"></script>
+
+    
   </body>
 </html>
