Add Brick MMO script to index.html
Added a script tag to include the Brick MMO library.

--- a/index.html
+++ b/index.html
@@ -92,5 +92,14 @@
         <p>Copyright © Watt’s Wrong 2025</p>
       </div>
     </footer>
+
+    <script src="https://cdn.brickmmo.com/bar@1.1.0/bar.js"
+        data-console="false" 
+        data-menu="false" 
+        data-admin="false" 
+        data-local="false" 
+        data-https="true"></script>
+
+    
   </body>
 </html>
